--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "hardhat": "^2.22.3"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "ethers": "^6.12.0"
   }
 }
